# net-test-server

./: Cargo.toml  README.md
src/: main.rs
web/: index.html  wstool.html
web/assets/: index-BoCKZTy7.js  index-D4PQu9p2.js  index-lYRCIeLP.css
web/css/: app.2681795d.css  app.7db461dc.css  app.8ef4391b.css  app.c719c302.css  chunk-vendors.50cad42d.css  chunk-vendors.f62c4639.css
web/js/: app.7ecdd368.js  app.7ecdd368.js.map  app.fb8e267c.js  chunk-vendors.185c2c91.js  chunk-vendors.185c2c91.js.map  chunk-vendors.7c8b67e8.js
web_src/: index.html  package-lock.json  package.json  vite.config.ts
web_src/src/: App.vue  style.css  types.ts  utils.ts
web_src/src/composables/: useWebSocket.ts
