[package]
name = "net-test-server"
version = "0.1.0"
edition = "2021"
authors = ["chenxuuu"]
description = "socket test server, control with websocket"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = {version = "0.3.1",features = ["default"]}
futures-util = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
lazy_static = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
random-string = "1.0"
fastrand = "1.5"

[profile.release]
lto = true
